pass props to components

--- a/src/data/projects/test1.mdx
+++ b/src/data/projects/test1.mdx
@@ -19,14 +19,8 @@ import heroImage from '@images/projects/quasecalouro_hero.png';
 	</span>
 </ProjectHero>
 
-<div class="py-8">
-	<ProjectPartners />
-</div>
+<ProjectPartners class="py-8" />
 
-<div class="py-8">
-	<ProjectCarousel />
-</div>
+<ProjectCarousel class="py-8" />
 
-<div class="py-8">
-	<ProjectDetails />
-</div>
+<ProjectDetails class="py-8" />
