--- a/src/data/projects/test1.mdx
+++ b/src/data/projects/test1.mdx
@@ -11,16 +11,64 @@ import ProjectCarousel from '@widgets/projects/ProjectCarousel.astro';
 import ProjectDetails from '@widgets/projects/ProjectDetails.astro';
 
 import heroImage from '@images/projects/quasecalouro_hero.png';
+import partner from '@images/spacewiz_logo_horizontal_negative.svg';
 
-<ProjectHero heroSrc={heroImage}>
+<ProjectHero class="py-8" heroSrc={heroImage}>
 	<span slot="title">{frontmatter.title}</span>
 	<span slot="subtitle">
 		<span class="text-sw-flamingo dark:text-sw-navy">Landing page</span> baseada em Wordpress
 	</span>
 </ProjectHero>
 
-<ProjectPartners class="py-8" />
+<ProjectPartners
+	class="py-8"
+	partners={[
+		{
+			src: partner,
+			description: 'Responsável por',
+		},
+		{
+			src: partner,
+			description: 'Responsável por',
+		},
+	]}
+/>
 
-<ProjectCarousel class="py-8" />
+<ProjectCarousel
+	class="py-8"
+	images={[
+		{
+			src: 'https://api.lorem.space/image/car?hash=8B7BCDC2',
+			title: 'Titulo',
+			description: 'Descrição',
+		},
+		{
+			src: 'https://api.lorem.space/image/car?hash=500B67FB',
+			title: 'Titulo',
+			description: 'Descrição',
+		},
+		{
+			src: 'https://api.lorem.space/image/car?hash=A89D0DE6',
+			title: 'Titulo',
+			description: 'Descrição',
+		},
+	]}
+/>
 
-<ProjectDetails class="py-8" />
+<ProjectDetails class="py-8">
+	<p slot="about">
+		Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos
+		oferecidos na plataforma (material didático, video-aulas e etc).
+	</p>
+	<span slot="techs">
+		Desenvolvido em <b>Wordpress</b> e <b>Elementor</b>.
+	</span>
+	<ul slot="techsList" class="mt-1 ml-8 list-disc">
+		<li>Cadastro em Newsletter;</li>
+		<li>Boas práticas LGPD;</li>
+		<li>Animações em CSS</li>
+		<li>Design responsivo;</li>
+		<li>Simulado de prova (ENADE).</li>
+	</ul>
+	<span slot="techIcons">icones</span>
+</ProjectDetails>
