carousel do caralho

--- a/src/data/projects/quasecalouro.mdx
+++ b/src/data/projects/quasecalouro.mdx
@@ -4,11 +4,16 @@ subtitle: Landing page baseada em Wordpress
 category: WebDev
 tags: [Landing page, Wordpress]
 date: 2015-11-09
-heroSrc: 'quasecalouro_hero'
-carrousel: ['@images/projects/quasecalouro_hero.png', '@images/projects/quasecalouro_hero.png']
+hero: 'quasecalouro_hero'
+carousel: [
+	{ src: 'https://picsum.photos/seed/A/200/300', title: 'Título', description: 'Descrição' },
+	{ src: 'https://picsum.photos/seed/B/200/300', title: 'Título', description: 'Descrição' },
+	{ src: 'https://picsum.photos/seed/C/200/300', title: 'Título', description: 'Descrição' },
+	{ src: 'https://picsum.photos/seed/D/200/300', title: 'Título', description: 'Descrição' },
+]
 partners: [
-	{ src: '@images/projects/quasecalouro_hero.png', description: 'texto' },
-	{ src: '@images/projects/quasecalouro_hero.png', description: 'texto' },
+	{ src: 'quasecalouro_hero', description: 'texto' },
+	{ src: 'quasecalouro_hero', description: 'texto' },
 ]
 ---
 
