base projects content

--- a/src/data/projects/web_quasecalouro.mdx
+++ b/src/data/projects/web_quasecalouro.mdx
@@ -3,7 +3,7 @@ title: '@quasecalouro'
 subtitle: Landing page baseada em Wordpress
 category: WebDev
 tags: [Landing page, Wordpress]
-date: 2015-11-09
+date: 2020-12
 hero: 'quasecalouro_hero'
 carousel: [
 	{ src: 'https://picsum.photos/seed/A/200/300', title: 'Título', description: 'Descrição' },
@@ -11,10 +11,7 @@ carousel: [
 	{ src: 'https://picsum.photos/seed/C/200/300', title: 'Título', description: 'Descrição' },
 	{ src: 'https://picsum.photos/seed/D/200/300', title: 'Título', description: 'Descrição' },
 ]
-partners: [
-	{ src: 'quasecalouro_hero', description: 'texto' },
-	{ src: 'quasecalouro_hero', description: 'texto' },
-]
+partners: []
 ---
 
 # Projeto: @quasecalouro
@@ -25,12 +22,12 @@ partners: [
 
 Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
 
+- Cadastro em Newsletter
+- Boas práticas LGPD
+- Animações em CSS
+- Design responsivo
+- Simulado de prova (ENADE)
+
 ## Tecnologias
 
 Desenvolvido em **Wordpress** e **Elementor**.
-
--   Cadastro em Newsletter
--   Boas práticas LGPD
--   Animações em CSS
--   Design responsivo
--   Simulado de prova (ENADE)
