--- a/src/data/projects/ar/enade_2021.mdx
+++ b/src/data/projects/ar/enade_2021.mdx
@@ -9,9 +9,9 @@ carousel: []
 partners: []
 ---
 
-# Projeto: Filtro #Enade2021
+# Filtro #Enade2021
 
-> 
+> Filtro para Instagram
 
 ## Sobre o Projeto
 
@@ -19,10 +19,4 @@ Um filtro do Instagram gamificado em que o jogador deve piscar para pular os obs
 
 ## Tecnologias
 
-.
-
--
--
--
--
--
+Feito no SparkAR em JavaScript / TypeScript.
