--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -9,7 +9,7 @@ carousel: []
 partners: []
 ---
 
-# Projeto: Jornada Vocacional (1º Edição)
+# Jornada Vocacional (1º Edição)
 
 > Experiência Interativa (Web)
 
