--- a/src/data/projects/web/jornada_vocacional_2.mdx
+++ b/src/data/projects/web/jornada_vocacional_2.mdx
@@ -9,7 +9,7 @@ carousel: []
 partners: []
 ---
 
-# Projeto: Jornada Vocacional - A Batalha (2º Edição)
+# Jornada Vocacional - A Batalha (2º Edição)
 
 > Experiência Interativa (Web)
 
