--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -9,7 +9,7 @@ carousel: []
 partners: []
 ---
 
-# Projeto: Jornada Vocacional - Expedição UNICEPLAC (3ª Edição)
+# Jornada Vocacional - Expedição UNICEPLAC (3ª Edição)
 
 > Experiência Interativa (Web)
 
