--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -6,20 +6,22 @@ tags: [Mobile Game, Unity 3D]
 date: 2016-10
 hero: 'mathematical_hero'
 carousel: [
-	{ src: '@images/projects/mathematical_print_00.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_01.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_02.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_03.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_04.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_05.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_06.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_07.png', title: 'Título', description: 'Descrição' },
-	{ src: '@images/projects/mathematical_print_08.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_00.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_01.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_02.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_03.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_04.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_05.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_06.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_07.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_08.png', title: 'Título', description: 'Descrição' },
 ]
-partners: []
+partners: [
+	# { src: '/images/projects/mathematical/spacewiz_logo_horizontal_negative.svg', description: 'Space Wizard Studios' }
+]
 ---
 
-# Projeto: Mathematical!
+# Mathematical!
 
 > Jogo educativo para mobile
 
