--- a/src/data/projects/web/only_kids.mdx
+++ b/src/data/projects/web/only_kids.mdx
@@ -9,7 +9,7 @@ carousel: []
 partners: []
 ---
 
-# Projeto: Loja Virtual Only Kids
+# Loja Virtual Only Kids
 
 > Loja Virtual Integrada às lojas Facebook e Instagram
 
