--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -15,13 +15,15 @@ partners: []
 
 ## Sobre o Projeto
 
-Idealizada para trazer imersão em tempos de pandemia, a Jornada Vocacional UNICEPLAC foi uma experiência interativa voltada à estudantes do Ensino Médio, que interagiram com o conteúdo e descobriram mais sobre as áreas de ensino do Centro Universitário.
+Idealizada para trazer imersão em tempos de pandemia, a Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário para e descobrir mais sobre diversas áreas de ensino e possíveis vocações.
 
-Com intuito de levar os estudantes a conhecerem melhor o campus e motivá-los a realizar atividades tanto online quanto presenciais, o projeto apresentou trouxe 03 Ambientes: a Tela Inicial (login), o Sistema Solar e os Planetas.
+Com intuito de os levar a conhecerem melhor o campus e motivá-los a realizar atividades tanto online quanto presenciais, o projeto apresentou 03 Ambientes aos estudantes: 
 
-Em cada planeta do Sistema Solar os estudantes foram levados aos conteúdos oferecidos, como vídeos, agendamentos em oficinas, quizzes e mais!
+- A Tela Inicial de apresentação e login;
+- O Sistema Solar onde encontraram desafios baseados em clássicos de arcade e 
+- Os Planetas onde foram levados aos conteúdos oferecidos, como vídeos, agendamentos em oficinas, quizzes e outras atividades!
 
-Na plataforma, os estudantes encontraram minigames baseados em clássicos de arcade, ganharam pontos por realizar atividades e concorreram à vários prêmios oferecidos pela Instituição de Ensino.
+Durante o evento, os estudantes ganharam pontos por realizar atividades e concorreram à vários prêmios oferecidos pela Instituição de Ensino.
 
 ## Tecnologias
 
