--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -24,4 +24,6 @@ A terceira edição da **Jornada Vocacional UNICEPLAC** trouxe uma nova experiê
 
 ## Tecnologias
 
-.
+- Bootstrap, mobile friendly.
+- Interações em JavaScript, JQuery e AJAX;
+- Estrutura baseada em CakePHP e MySQL.
