--- a/src/data/policies/terms.mdx
+++ b/src/data/policies/terms.mdx
@@ -1,13 +1,59 @@
-# Termos
+# Termos de Uso
 
-Ao acessar ao site Space Wizard Studios, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.
+> O site **spacewiz.dev** é um serviço de propriedade da empresa Space Wizard Studios, que é a controladora dos dados pessoais solicitados e fornecidos, conforme descrito nesta política.
 
-2. Uso de LicençaÉ concedida permissão para baixar temporariamente uma cópia dos materiais (informações ou software) no site Space Wizard Studios , apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode: modificar ou copiar os materiais; usar os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não comercial); tentar descompilar ou fazer engenharia reversa de qualquer software contido no site Space Wizard Studios; remover quaisquer direitos autorais ou outras notações de propriedade dos materiais; ou transferir os materiais para outra pessoa ou 'espelhe' os materiais em qualquer outro servidor.Esta licença será automaticamente rescindida se você violar alguma dessas restrições e poderá ser rescindida por Space Wizard Studios a qualquer momento. Ao encerrar a visualização desses materiais ou após o término desta licença, você deve apagar todos os materiais baixados em sua posse, seja em formato eletrónico ou impresso.
+A Space Wizard Studios, pessoa jurídica de direito privado descreve, através deste documento, as regras de uso dos serviços e produtos operados pelo proprietário.
 
-3. Isenção de responsabilidadeOs materiais no site da Space Wizard Studios são fornecidos 'como estão'. Space Wizard Studios não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as outras garantias, incluindo, sem limitação, garantias implícitas ou condições de comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou outra violação de direitos.Além disso, o Space Wizard Studios não garante ou faz qualquer representação relativa à precisão, aos resultados prováveis ​​ou à confiabilidade do uso dos materiais em seu site ou de outra forma relacionado a esses materiais ou em sites vinculados a este site.
+Ao acessar tais serviços e produtos, consideramos que você está de acordo em cumprir estes Termos de Uso, todas as leis e regulamentos aplicáveis e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses Termos, está proibido de usar ou acessar este site, cadastrar-se ou enviar os seus dados pessoais. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.
 
-4. LimitaçõesEm nenhum caso o Space Wizard Studios ou seus fornecedores serão responsáveis ​​por quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos negócios) decorrentes do uso ou da incapacidade de usar os materiais em Space Wizard Studios, mesmo que Space Wizard Studios ou um representante autorizado da Space Wizard Studios tenha sido notificado oralmente ou por escrito da possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas, ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se aplicar a você.
+Se modificarmos nossos Termos de Uso, publicaremos o novo texto neste site, com a data de revisão atualizada. Podemos alterar este documento a qualquer momento. Caso haja alteração significativa nos Termos deste contrato, podemos informá-lo por meio das informações de contato que tivermos em nosso banco de dados ou por meio de notificações.
 
-5. Precisão dos materiaisOs materiais exibidos no site da Space Wizard Studios podem incluir erros técnicos, tipográficos ou fotográficos. Space Wizard Studios não garante que qualquer material em seu site seja preciso, completo ou atual. Space Wizard Studios pode fazer alterações nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, Space Wizard Studios não se compromete a atualizar os materiais.
+A utilização deste site após as alterações significa que você aceitou os Termos de Uso revisados. Caso, após a leitura da versão revisada, você não esteja de acordo com seus Termos, favor encerrar o seu acesso.
 
-6. LinksO Space Wizard Studios não analisou todos os sites vinculados ao seu site e não é responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por Space Wizard Studios do site. O uso de qualquer site vinculado é por conta e risco do usuário.ModificaçõesO Space Wizard Studios pode revisar estes termos de serviço do site a qualquer momento, sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de serviço.Lei aplicávelEstes termos e condições são regidos e interpretados de acordo com as leis do Space Wizard Studios e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.
+## Este Site
+
+O **projeto** de desenvolvimento deste site é licenciado nos termos da licença MIT, confome arquivo [LICENSE.md](https://github.com/Space-Wizard-Studios/sw-site/) no repositório do projeto. E, portanto, você pode utilizá-lo para consulta, modificação e redistribuição do código fonte sob os termos indicados.
+
+Ademais, a licença para utilização dos materiais de caráter audiovisuais (como textos, gráficos, imagens, sons e vídeos), serão retratados neste documento, indicados apenas como "materiais".
+
+## Materiais
+
+É concedida permissão para baixar temporariamente uma cópia dos materiais no site **spacewiz.dev** , apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode:
+
+-   Modificar ou copiar os materiais;
+
+-   Usar os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não comercial);
+
+-   Remover quaisquer direitos autorais ou outras notações de propriedade dos materiais; ou
+
+-   Transferir os materiais para outra pessoa ou "espelhar" os materiais em qualquer outro servidor.
+
+Esta licença será automaticamente rescindida se você violar alguma dessas restrições e poderá ser rescindida por Space Wizard Studios a qualquer momento. Ao encerrar a visualização desses materiais ou após o término desta licença, você deve apagar todos os materiais baixados em sua posse, seja em formato eletrónico ou impresso.
+
+### Isenção de responsabilidade
+
+    Os materiais no site da Space Wizard Studios são fornecidos "como estão". Space Wizard Studios não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as outras garantias, incluindo, sem limitação, garantias implícitas ou condições de comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou outra violação de direitos. Além disso, a Space Wizard Studios não garante ou faz qualquer representação relativa à precisão, aos resultados prováveis ou à confiabilidade do uso dos materiais em seu site ou de outra forma relacionado a esses materiais ou em sites vinculados a este site.
+
+### Limitações
+
+    Em nenhum caso o Space Wizard Studios ou seus fornecedores serão responsáveis ​por quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos negócios) decorrentes do uso ou da incapacidade de usar os materiais em Space Wizard Studios, mesmo que Space Wizard Studios ou um representante autorizado da Space Wizard Studios tenha sido notificado oralmente ou por escrito da possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas, ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se aplicar a você.
+
+### Precisão dos materiais
+
+    Os materiais exibidos no site da Space Wizard Studios podem incluir erros técnicos, tipográficos ou fotográficos. Space Wizard Studios não garante que qualquer material em seu site seja preciso, completo ou atual. Space Wizard Studios pode fazer alterações nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, Space Wizard Studios não se compromete a atualizar os materiais.
+
+### Links
+
+    O Space Wizard Studios não analisou todos os sites vinculados ao seu site e não é responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por Space Wizard Studios do site. O uso de qualquer site vinculado é por conta e risco do usuário.ModificaçõesO Space Wizard Studios pode revisar estes Termos de serviço do site a qualquer momento, sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses Termos de serviço.Lei aplicávelEstes Termos e condições são regidos e interpretados de acordo com as leis do Space Wizard Studios e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.
+
+### Compromisso do Usuário
+
+O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o Space Wizard Studios oferece no site e com caráter enunciativo, mas não limitativo:
+
+-   Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;
+
+-   Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, generador de avisos de privacidad ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;
+
+-   Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Space Wizard Studios, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.
+
+<p class="my-8">Esta política é válida a partir de Jan 2023.</p>
