<img src> da pasta public

--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -4,7 +4,7 @@ subtitle: Jogo educativo para mobile
 category: GameDev
 tags: [Mobile Game, Unity 3D]
 date: 2016-10
-hero: 'mathematical_hero'
+hero: '/images/projects/filtro_enade_2021/mathematical_hero.png'
 carousel: [
 	{ src: '/images/projects/mathematical/mathematical_print_00.png', title: 'Título', description: 'Descrição' },
 	{ src: '/images/projects/mathematical/mathematical_print_01.png', title: 'Título', description: 'Descrição' },
