--- a/src/data/projects/web/jornada_vocacional_2.mdx
+++ b/src/data/projects/web/jornada_vocacional_2.mdx
@@ -4,7 +4,7 @@ subtitle: Experiência Interativa (Web)
 category: WebDev
 tags: []
 date: 2021-05
-hero: 'jornada_2_hero'
+hero: '/images/projects/jornada_2/jornada_2_hero.png'
 carousel: []
 partners: []
 ---
