--- a/src/data/projects/web/only_kids.mdx
+++ b/src/data/projects/web/only_kids.mdx
@@ -4,7 +4,7 @@ subtitle: Loja Virtual Integrada às lojas Facebook e Instagram
 category: WebDev
 tags: [WooCommerce, Wordpress]
 date: 2021-03
-hero: '/images/projects/only_kids/only_kids_hero.png'
+hero: '/images/projects/only_kids/only_kids_hero.wepb'
 carousel: []
 partners: []
 ---
