agora tem imagem

--- a/src/data/projects/ar/enade_2021.mdx
+++ b/src/data/projects/ar/enade_2021.mdx
@@ -4,7 +4,7 @@ subtitle: Filtro para Instagram
 category: AR
 tags: [Augmented Reality, Instagram, Filter]
 date: 2022-02
-hero: '/images/projects/filtro_enade_2021/filtro_enade_2021_hero.wepb'
+hero: '/images/projects/filtro_enade_2021/filtro_enade_2021_hero.webp'
 carousel: []
 partners: []
 ---
