--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -4,7 +4,7 @@ subtitle: Experiência Interativa (Web)
 category: WebDev
 tags: []
 date: 2020-10
-hero: '/images/projects/jornada_1/jornada_1_hero.wepb'
+hero: '/images/projects/jornada_1/jornada_1_hero.webp'
 carousel: []
 partners: []
 ---
