--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -4,7 +4,7 @@ subtitle: Experiência Interativa (Web)
 category: WebDev
 tags: []
 date: 2020-10
-hero: 'jornada_1_hero'
+hero: '/images/projects/jornada_1/jornada_1_hero.webp'
 carousel: []
 partners: []
 ---
@@ -17,10 +17,10 @@ partners: []
 
 Idealizada para trazer imersão em tempos de pandemia, a Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário para e descobrir mais sobre diversas áreas de ensino e possíveis vocações.
 
-Com intuito de os levar a conhecerem melhor o campus e motivá-los a realizar atividades tanto online quanto presenciais, o projeto apresentou 03 Ambientes aos estudantes: 
+Com intuito de os levar a conhecerem melhor o campus e motivá-los a realizar atividades tanto online quanto presenciais, o projeto apresentou 03 Ambientes aos estudantes:
 
 - A Tela Inicial de apresentação e login;
-- O Sistema Solar onde encontraram desafios baseados em clássicos de arcade e 
+- O Sistema Solar onde encontraram desafios baseados em clássicos de arcade e
 - Os Planetas onde foram levados aos conteúdos oferecidos, como vídeos, agendamentos em oficinas, quizzes e outras atividades!
 
 Durante o evento, os estudantes ganharam pontos por realizar atividades e concorreram à vários prêmios oferecidos pela Instituição de Ensino.
