--- a/src/data/projects/web/quasecalouro.mdx
+++ b/src/data/projects/web/quasecalouro.mdx
@@ -4,7 +4,7 @@ subtitle: Landing page baseada em Wordpress
 category: WebDev
 tags: [Landing page, Wordpress]
 date: 2020-12
-hero: 'quasecalouro_hero'
+hero: '/images/projects/quasecalouro/quasecalouro_hero.webp'
 carousel: [
 	{ src: 'https://picsum.photos/seed/A/200/300', title: 'Título', description: 'Descrição' },
 	{ src: 'https://picsum.photos/seed/B/200/300', title: 'Título', description: 'Descrição' },
