--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -4,17 +4,17 @@ subtitle: Jogo educativo para mobile
 category: GameDev
 tags: [Mobile Game, Unity 3D]
 date: 2016-10
-hero: 'mathematical_hero'
+hero: '/images/projects/mathematical/mathematical_hero.webp'
 carousel: [
-	{ src: '/images/projects/mathematical/mathematical_print_00.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_01.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_02.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_03.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_04.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_05.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_06.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_07.png', title: 'Título', description: 'Descrição' },
-	{ src: '/images/projects/mathematical/mathematical_print_08.png', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_00.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_01.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_02.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_03.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_04.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_05.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_06.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_07.webp', title: 'Título', description: 'Descrição' },
+	{ src: '/images/projects/mathematical/mathematical_print_08.webp', title: 'Título', description: 'Descrição' },
 ]
 partners: [
 	# { src: '/images/projects/mathematical/spacewiz_logo_horizontal_negative.svg', description: 'Space Wizard Studios' }
