--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -4,7 +4,7 @@ subtitle: Experiência Interativa (Web)
 category: WebDev
 tags: []
 date: 2021-10
-hero: 'jornada_3_hero'
+hero: '/images/projects/jornada_3/jornada_3_hero.webp'
 carousel: []
 partners: []
 ---
