descrições dos projetos

--- a/src/data/projects/ar/enade_2021.mdx
+++ b/src/data/projects/ar/enade_2021.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Filtro #Enade2021'
 subtitle: Filtro para Instagram
+description: Um filtro do Instagram gamificado em que o jogador deve piscar para pular os obstáculos e alcançar o seu diploma ao final da aventura!
 category: AR
 tags: [Augmented Reality, Instagram, Filter]
 date: 2022-02
