--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Mathematical!'
 subtitle: Jogo educativo para mobile
+description: Um “shoot'em up” gratuíto em que o jogador deve completar desafios matemáticos para avançar pelos níveis enquanto destrói os inimigos de cada fase!
 category: GameDev
 tags: [Mobile Game, Unity 3D]
 date: 2016-10
@@ -27,7 +28,7 @@ partners: [
 
 ## Sobre o Projeto
 
-Um “shoot’em up” gratuíto em que o jogador deveria completar desafios matemáticos para avançar pelos níveis enquanto destrói os inimigos de cada fase! O jogo inclui várias naves e partículas, permitindo a combinações e melhorias!
+Um “shoot'em up” gratuíto em que o jogador deve completar desafios matemáticos para avançar pelos níveis enquanto destrói os inimigos de cada fase! O jogo inclui várias naves e partículas, permitindo a combinações e melhorias!
 
 ## Tecnologias
 
