--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Jornada Vocacional (1º Edição)'
 subtitle: Experiência Interativa (Web)
+description: A Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário.
 category: WebDev
 tags: []
 date: 2020-10
