--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Jornada Vocacional - Expedição UNICEPLAC (3ª Edição)'
 subtitle: Experiência Interativa (Web)
+description: A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!
 category: WebDev
 tags: []
 date: 2021-10
@@ -15,7 +16,7 @@ partners: []
 
 ## Sobre o Projeto
 
-A terceira edição da **Jornada Vocacional UNICEPLAC** trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!
+A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!
 
 - Criação de Avatar;
 - Mapa interativo com pontos de interesse;
