--- a/src/data/projects/web/only_kids.mdx
+++ b/src/data/projects/web/only_kids.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Loja Virtual Only Kids'
 subtitle: Loja Virtual Integrada às lojas Facebook e Instagram
+description: Ambiente em Wordpress com integração e automação às lojas do Facebook, Instagram e sistema Bling ERP.
 category: WebDev
 tags: [WooCommerce, Wordpress]
 date: 2021-03
