--- a/src/data/projects/web/quasecalouro.mdx
+++ b/src/data/projects/web/quasecalouro.mdx
@@ -1,6 +1,7 @@
 ---
 title: '@quasecalouro'
 subtitle: Landing page baseada em Wordpress
+description: Na plataforma, os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
 category: WebDev
 tags: [Landing page, Wordpress]
 date: 2020-12
@@ -20,7 +21,7 @@ partners: []
 
 ## Sobre o Projeto
 
-Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
+Com o objetivo de capturar leads para o cliente, na plataforma os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
 
 - Cadastro em Newsletter
 - Boas práticas LGPD
