--- a/src/data/projects/web/jornada_vocacional_2.mdx
+++ b/src/data/projects/web/jornada_vocacional_2.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Jornada Vocacional - A Batalha (2º Edição)'
 subtitle: Experiência Interativa (Web)
+description: 
 category: WebDev
 tags: []
 date: 2021-05
@@ -15,7 +16,7 @@ partners: []
 
 ## Sobre o Projeto
 
-.
+Na segunda edição do evento, houveram diversas melhorias na interface e navegação, além de novos desafios, minigames e conteúdos. 
 
 ## Tecnologias
 
