allow empty arrays

--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -17,9 +17,7 @@ carousel: [
 	{ src: '/images/projects/mathematical/mathematical_print_07.webp', title: 'Título', description: 'Descrição' },
 	{ src: '/images/projects/mathematical/mathematical_print_08.webp', title: 'Título', description: 'Descrição' },
 ]
-partners: [
-	# { src: '/images/projects/mathematical/spacewiz_logo_horizontal_negative.svg', description: 'Space Wizard Studios' }
-]
+partners: []
 ---
 
 # Mathematical!
