--- a/src/data/projects/web/quasecalouro.mdx
+++ b/src/data/projects/web/quasecalouro.mdx
@@ -6,12 +6,7 @@ category: WebDev
 tags: [Landing page, Wordpress]
 date: 2020-12
 hero: '/images/projects/quasecalouro/quasecalouro_hero.webp'
-carousel: [
-	{ src: 'https://picsum.photos/seed/A/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/B/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/C/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/D/200/300', title: 'Título', description: 'Descrição' },
-]
+carousel: []
 partners: []
 ---
 
