--- a/src/data/projects/web/quasecalouro.mdx
+++ b/src/data/projects/web/quasecalouro.mdx
@@ -1,16 +1,12 @@
 ---
 title: '@quasecalouro'
 subtitle: Landing page baseada em Wordpress
+description: Na plataforma, os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
 category: WebDev
 tags: [Landing page, Wordpress]
 date: 2020-12
 hero: '/images/projects/quasecalouro/quasecalouro_hero.webp'
-carousel: [
-	{ src: 'https://picsum.photos/seed/A/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/B/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/C/200/300', title: 'Título', description: 'Descrição' },
-	{ src: 'https://picsum.photos/seed/D/200/300', title: 'Título', description: 'Descrição' },
-]
+carousel: []
 partners: []
 ---
 
@@ -20,7 +16,7 @@ partners: []
 
 ## Sobre o Projeto
 
-Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
+Com o objetivo de capturar leads para o cliente, na plataforma os estudantes puderam acompanhar a conteúdos exclusivos na plataforma (material didático, video-aulas e etc).
 
 - Cadastro em Newsletter
 - Boas práticas LGPD
