padronização nomes jornada

--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Jornada Vocacional (1º Edição)'
+title: 'Jornada Vocacional 1'
 subtitle: Experiência Interativa (Web)
 description: A Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário.
 category: WebDev
