--- a/src/data/projects/web/jornada_vocacional_2.mdx
+++ b/src/data/projects/web/jornada_vocacional_2.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Jornada Vocacional - A Batalha (2º Edição)'
+title: 'Jornada Vocacional 2 - A Batalha'
 subtitle: Experiência Interativa (Web)
 description: Na segunda edição da Jornada Vocacional Uniceplac, houveram diversas melhorias na interface e navegação, além de novos desafios, minigames e conteúdos.
 category: WebDev
