--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Jornada Vocacional - Expedição UNICEPLAC (3ª Edição)'
+title: 'Jornada Vocacional 3 - Expedição'
 subtitle: Experiência Interativa (Web)
 description: A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!
 category: WebDev
