Fixes alt em imagens #36

--- a/src/data/projects/ar/enade_2021.mdx
+++ b/src/data/projects/ar/enade_2021.mdx
@@ -5,7 +5,9 @@ description: Um filtro do Instagram gamificado em que o jogador deve piscar para
 category: AR
 tags: [Augmented Reality, Instagram, Filter]
 date: 2022-02
-hero: '/images/projects/filtro_enade_2021/filtro_enade_2021_hero.webp'
+heroSrc: '/images/projects/filtro_enade_2021/filtro_enade_2021_hero.webp'
+heroTitle: 'Banner do projeto Enade#2021'
+heroAltText: 'Banner do projeto Enade#2021'
 carousel: []
 partners: []
 ---
