--- a/src/data/projects/games/mathematical.mdx
+++ b/src/data/projects/games/mathematical.mdx
@@ -5,7 +5,9 @@ description: Um “shoot'em up” gratuíto em que o jogador deve completar desa
 category: GameDev
 tags: [Mobile Game, Unity 3D]
 date: 2016-10
-hero: '/images/projects/mathematical/mathematical_hero.webp'
+heroSrc: '/images/projects/mathematical/mathematical_hero.webp'
+heroTitle: 'Banner do projeto Mathematical!'
+heroAltText: 'Banner do projeto Mathematical!'
 carousel: [
 	{ src: '/images/projects/mathematical/mathematical_print_00.webp', title: 'Título', description: 'Descrição' },
 	{ src: '/images/projects/mathematical/mathematical_print_01.webp', title: 'Título', description: 'Descrição' },
