--- a/src/data/projects/web/jornada_vocacional_1.mdx
+++ b/src/data/projects/web/jornada_vocacional_1.mdx
@@ -5,7 +5,9 @@ description: A Jornada Vocacional UNICEPLAC foi uma experiência voltada à estu
 category: WebDev
 tags: []
 date: 2020-10
-hero: '/images/projects/jornada_1/jornada_1_hero.webp'
+heroSrc: '/images/projects/jornada_1/jornada_1_hero.webp'
+heroTitle: 'Banner do projeto Jornada Vocacional 1'
+heroAltText: ''
 carousel: []
 partners: []
 ---
