--- a/src/data/projects/web/jornada_vocacional_2.mdx
+++ b/src/data/projects/web/jornada_vocacional_2.mdx
@@ -5,7 +5,9 @@ description: Na segunda edição da Jornada Vocacional Uniceplac, houveram diver
 category: WebDev
 tags: []
 date: 2021-05
-hero: '/images/projects/jornada_2/jornada_2_hero.webp'
+heroSrc: '/images/projects/jornada_2/jornada_2_hero.webp'
+heroTitle: 'Banner do projeto Jornada Vocacional 2'
+heroAltText: 'Banner do projeto Jornada Vocacional 2'
 carousel: []
 partners: []
 ---
