--- a/src/data/projects/web/jornada_vocacional_3.mdx
+++ b/src/data/projects/web/jornada_vocacional_3.mdx
@@ -5,7 +5,9 @@ description: A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova
 category: WebDev
 tags: []
 date: 2021-10
-hero: '/images/projects/jornada_3/jornada_3_hero.webp'
+heroSrc: '/images/projects/jornada_3/jornada_3_hero.webp'
+heroTitle: 'Banner do projeto Jornada Vocacional 3'
+heroAltText: 'Banner do projeto Jornada Vocacional 3'
 carousel: []
 partners: []
 ---
