--- a/src/data/projects/web/only_kids.mdx
+++ b/src/data/projects/web/only_kids.mdx
@@ -5,7 +5,9 @@ description: Ambiente em Wordpress com integração e automação às lojas do F
 category: WebDev
 tags: [WooCommerce, Wordpress]
 date: 2021-03
-hero: '/images/projects/only_kids/only_kids_hero.webp'
+heroSrc: '/images/projects/only_kids/only_kids_hero.webp'
+heroTitle: 'Banner do projeto Loja Virtual Only Kids'
+heroAltText: 'Banner do projeto Loja Virtual Only Kids'
 carousel: []
 partners: []
 ---
