--- a/src/data/projects/web/quasecalouro.mdx
+++ b/src/data/projects/web/quasecalouro.mdx
@@ -5,7 +5,9 @@ description: Na plataforma, os estudantes puderam acompanhar a conteúdos exclus
 category: WebDev
 tags: [Landing page, Wordpress]
 date: 2020-12
-hero: '/images/projects/quasecalouro/quasecalouro_hero.webp'
+heroSrc: '/images/projects/quasecalouro/quasecalouro_hero.webp'
+heroTitle: 'Banner do projeto @quasecalouro'
+heroAltText: 'Banner do projeto @quasecalouro'
 carousel: []
 partners: []
 ---
